# loom-novel

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/: agent-architecture-eval.md  local-enhanced-branch-diff.md  上手一页版.md  使用教程.md  调试.md
evals/: README.md  __init__.py  baseline.json  calibration.py  dataset.py  export_packets.py  generate.py  graders.py  harness.py  judge.py  metering.py  report.py  run_eval.py
loom/: __init__.py  agents.py  aitell.py  archive.py  backends.py  brainedit.py  budget.py  chapter_plan.py  chapters.py  chaptertext.py  cli.py  cnnum.py  config.py  continuity.py  deconstruct.py  desktop.py  detectors.py  diagnose.py  doctor.py  draft.py  enrich.py  errors.py  evalapi.py  events.py  fatigue.py  fingerprint.py  fsutil.py  gates.py  guard.py  hooks.py  import_jobs.py  import_project.py  importer.py  journey.py  ledger.py  parse.py  partner.py  partner_context.py  partner_store.py  partner_tools.py  (+15 more)
media/: make_vertical.py
packaging/: README.md  build.sh  loom.icns  loom.spec  loom_app.py  make_icon.py  make_logo.py  release-notes.md  subset_font.py
skills/: 去AI味revise.md  质检rubric.md
tests/: conftest.py  test_aitell.py  test_backend_timeout.py  test_backend_usage.py  test_brain_dirs.py  test_brain_ready.py  test_brainedit.py  test_budget.py  test_chapter_length.py  test_chapter_plan.py  test_chapters_renumber.py  test_chaptertext.py  test_cnnum.py  test_continuity.py  test_create_seed.py  test_default_backend_endpoint.py  test_detectors.py  test_diagnose.py  test_doctor_nav.py  test_draft_seed.py  test_edit_note_fence.py  (+72 more)
(+208 files in other folders)
