[project]
name = "loom-novel"
version = "0.3.3"
description = "把一队分工 Agent 织成一条写小说流水线的命令行工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chambers" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dist = ["pyinstaller>=6.0"]   # 打包成 .app/.exe:pip install -e ".[dist]"
dev = ["pytest>=8.0"]         # 跑测试:pip install -e ".[dev]" && pytest

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
loom-app = "loom.desktop:run"      # 桌面客户端(原生窗口)
loom-serve = "loom.desktop:serve"  # 兜底:浏览器里跑
loom = "loom.cli:app"              # 内部引擎调试 CLI

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.hatch.build.targets.wheel.force-include]
"loom/templates" = "loom/templates"
"loom/webui" = "loom/webui"
"loom/sample" = "loom/sample"
